# vg_sso

./: .dockerignore  .env.dev  .env.template  .gitignore  .gitmodules  AGENTS.md  Docker_Quick_Cmds.md  Dockerfile  Makefile  README.md  UPGRADING.md  docker-compose.override.yml  docker-compose.upgrade-test.yml  docker-compose.yml  handoff.md  kc.sh  kcadm.sh
custom-account-expiry-spi/: README.md  pom.xml
custom-async-email-spi/: README.md  pom.xml
custom-delegated-admin-guard-spi/: README.md  pom.xml
custom-failure-logs-event-listener-spi/: README.md  pom.xml
custom-group-attr-mapper/: README.md  pom.xml
custom-password-phrase-policy-spi/: README.md  pom.xml
custom-phone-otp-authenticator/: README.md  pom.xml
custom-user-onboarding-email-spi/: pom.xml
docs/: Browser-app-configuration.md  STEP_1.md  STEP_2_REALM_Config.md  Step_10_UserOnboarding.md  Step_11_AsyncEmail.md  Step_3_custom-group-attr-mapper_andCLAIMS.md  Step_4_PhoneSMSOTP.md  Step_5_Account_expiry.md  Step_6_org_default_Roles.md  Step_7_per_client_admin.md  Step_8_auditor_role.md  Step_9_audit_archival.md  account-expiry-policy.md  async-email-spi-plan.md  audit-archival-policy.md  auditor-role-policy.md  branding-assets.md  delegated-client-admin-policy.md  failure-auth-logging-policy.md  group-import.md  password-phrase-policy.md  prod-setup.md  sms-otp-policy.md  user-manager-policy.md
nginx-confs/: 00-global-http.conf  sso1-master.conf  sso2-vg-new-delhi.conf
tests/live_config/: Dockerfile  assessment.py  conftest.py  generate_report.py  pyproject.toml  test_live_config.py
(+138 files in other folders)
