[project]
name = "vg-live-config-tests"
version = "0.1.0"
description = "Live validation tests for the Step 1/2/3 Keycloak docker-compose stack"
requires-python = ">=3.12"
dependencies = [
  "pytest>=8.4,<9",
  "PyYAML>=6.0,<7",
  "requests>=2.31,<3",
  "beautifulsoup4>=4.12,<5",
]

[tool.uv]
package = false
